[package]
name = "p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.1"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.10.3"
serde = {version = "1.0.197", features=["derive"]}
serde_json = "1.0.114"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
